--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@teachablemachine/image": "^0.8.5",
+    "aws-sdk": "^2.1691.0",
+    "date-fns": "^4.1.0",
+    "encoding": "^0.1.13",
+    "lucide-react": "^0.452.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
+    "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5"
   }
 }
