--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "sonner": "^1.7.0",
+    "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
