--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lucide-react": "^0.452.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
-    "next": "14.2.5",
+    "next": "^14.2.20",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-datepicker": "^7.4.0",
