--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,15 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/api/auth/login/route.js"
+    "src/app/api/auth/login/route.js",
+    "src/components/UserTable.Jsx",
+    "src/components/Form/MedicalForm.jsx",
+    "src/app/layout.jsx",
+    "src/app/register/page.jsx",
+    "src/app/api/auth/register/route.js",
+    "src/app/api/admin/route.js",
+    "src/components/ClientSideWrapper.jsx",
+    "src/app/admin/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
